uf-7271: wip enums